--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     </head>
     
     <body>
-          <h1>Hello Xin Chao</h1>
-          <br><br> <!--break-->
-          <hr> <!--change of content-->
-          <p>Hungry hungry hungry</p>
-          <p>
+          <h1>HELLO</h1>
+          <br><br>
+          <hr>
               <a href="page2.html">Go to Zweizwo</a>
           </p>
+          
+          <p>
+              <a href="composition/index.html">Go to my composition</a>
+          </p>
+        <p>
+              <a href="composition2/index.html">Go to my composition2</a>
+        </p>
     </body>
 
 
