--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Blublabblub</title>
+		<title>BLUB</title>
     </head>
     
     <body>
-          <h1>Zweizwo</h1>
+          <h2>Zweiwo</h2>
     </body>
 
 
