--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <p>
               <a href="composition3/index.html">Go to Alice</a>
               </p>
+              
+            <p>
+              <a href="composition4/index.html">Go and draw</a>
+              </p>
     </body>
 
 
