--- a/composition3/index.html
+++ b/composition3/index.html
@@ -3,6 +3,7 @@
 		<meta charset="UTF-8">
 		<title>HELLO WORLD</title>
 		<link href="styles.css" rel="stylesheet" type="text/css">
+		<link href="composition/index.html" rel=""
 	</head>
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
@@ -13,6 +14,5 @@
 		<h1>Down, down, down. There was nothing else to do, so Alice soon began talking again. 'Dinah'll miss me very much tonight, I should think!' (Dinah was the cat.) 'I hope they'll remember her saucer of milk at tea-time. Dinah my dear! I wish you were down here with me! There are no mice in the air, I'm afraid, but you might catch a bat, and that's very like a mouse, you know. But do cats eat bats, I wonder?' And here Alice began to get rather sleepy, and went on saying to herself, in a dreamy sort of way, </h1>
 		<h2>'Do cats eat bats? Do cats eat bats?'</h2>
 		<h3>and sometimes, 'Do bats eat cats?' for, you see, as she couldn't answer either question, it didn't much matter which way she put it. She felt that she was dozing off, and had just begun to dream that she was walking hand in hand with Dinah, and saying to her very earnestly, 'Now, Dinah, tell me the truth: did you ever eat a bat?' when suddenly, thump! thump! down she came upon a heap of sticks and dry leaves, and the fall was over.</h3>
-
 	</body>
 </html>
