--- a/Poem/strophe_1d.html
+++ b/Poem/strophe_1d.html
@@ -17,7 +17,7 @@
 		Das Frühstück am nächsten Kind, seine Mahlzeiten</div>
 		
 		<a class="left" href="strophe_2d.html">..</a>
-		<a class="right" href="strophe_1d.html">.</a>
+		<a class="right" href="strophe_1.html">.</a>
 		<a class="middle" href=".html">&#8675;</a>
 	</body>
 </html>
