--- a/Poem/modul.html
+++ b/Poem/modul.html
@@ -2,12 +2,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>MODULE</title>
-		<link href="styles.css" rel="stylesheet" type="text/css">
+		<link href="modul.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 
 		<!-- This anchor should link to your ARTIFACT -->
-		<a href="http://virtualartifacts.github.io/composition/index.html">
+		<a href="main.html">
 
 			<div class="module">
 
