--- a/Poem/strophe_2.html
+++ b/Poem/strophe_2.html
@@ -9,7 +9,7 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
-		<script language="javascript" type="text/javascript" src="sketch2.js"></script>
+		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
 		<div>My ways between two slopes<br>
 		Double tops up the mountain village called Double<br>
