--- a/Poem/strophe_1d.html
+++ b/Poem/strophe_1d.html
@@ -18,6 +18,6 @@
 		
 		<a class="left" href="strophe_2d.html">..</a>
 		<a class="right" href="strophe_1.html">.</a>
-		<a class="middle" href=".html">&#8675;</a>
+		<a class="middle" href="strophe_empty.html">&#8675;</a>
 	</body>
 </html>
