--- a/Poem/strophe_3.html
+++ b/Poem/strophe_3.html
@@ -16,9 +16,9 @@
 		New to speak alone, had a promise<br>
 		Doubt where there was never heard another word.</div>
 		
-		<a class="left" href="strophe_2.html">..</a>
+		<a class="left" href="strophe_2">..</a>
 		<a class="right" href="strophe_4.html">....</a>
-		<a class="middle" href=".html">&#8675;</a>
+		<a class="middle" href="index-red.html">&#8675;</a>
 		
 	</body>
 </html>
