--- a/Poem/strophe_4.html
+++ b/Poem/strophe_4.html
@@ -11,13 +11,14 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Meine Wege zwischen zwei Pisten<br>
-		Doppel-Tops auf den Berg Dorf namens Doppel<br>
-		Ich ihn scherzend: wie gut, dass<br>
-		Mann und Frau stehend Berg Berg twin!</div>
+		<div>Britain in the team , to the Northeast<br>
+		Fought selflessly in the year<br>
+		Several semiconductor companies to ask<br>
+		Who people Xuan Duc , Double Mountain reasonable?</div>
 		
-		<a class="left" href="strophe_1d.html">...</a>
-		<a class="right" href="strophe_1d.html">.</a>
-		<a class="middle" href="strophe_empty.html">&#8675;</a>
+		<a class="left" href="strophe_3.html">.</a>
+		<a class="right" href="strophe_1.html">...</a>
+		<a class="middle" href="index2.html">&#8675;</a>
+		
 	</body>
 </html>
