--- a/Poem/strophe_empty.html
+++ b/Poem/strophe_empty.html
@@ -11,13 +11,14 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Meine Wege zwischen zwei Pisten<br>
-		Doppel-Tops auf den Berg Dorf namens Doppel<br>
-		Ich ihn scherzend: wie gut, dass<br>
-		Mann und Frau stehend Berg Berg twin!</div>
+		<!-- <div>Seven years ago, I'm seventeen<br>
+		He twenties, the youngest in the village<br>
+		Xuan Duc, Dong flanks Đoài rice<br>
+		Breakfast the next child, his meals to</div> -->
 		
-		<a class="left" href="strophe_1d.html">...</a>
-		<a class="right" href="strophe_1d.html">.</a>
-		<a class="middle" href="strophe_empty.html">&#8675;</a>
+		<a class="left" href="strophe_1d.html">.</a>
+		<a class="right" href="strophe_2.html">..</a>
+		<a class="middle" href=".html">&#8675;</a>
+
 	</body>
 </html>
