--- a/module/index.html
+++ b/module/index.html
@@ -2,12 +2,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>MODULE</title>
-		<link href="modul.css" rel="stylesheet" type="text/css">
+		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 
 		<!-- This anchor should link to your ARTIFACT -->
-		<a href="main.html">
+		<a href="http://thaoeder.github.io/Poem/main.html">
 
 			<div class="module">
 
