--- a/Poem/strophe_1.html
+++ b/Poem/strophe_1.html
@@ -18,7 +18,7 @@
 		
 		<a class="left" href="strophe_1d.html">.</a>
 		<a class="right" href="strophe_2.html">..</a>
-		<a class="middle" href=".html">&#8675;</a>
+		<a class="middle" href="strophe_empty.html">&#8675;</a>
 
 	</body>
 </html>
