--- a/module/index.html
+++ b/module/index.html
@@ -7,7 +7,7 @@
 	<body>
 
 		<!-- This anchor should link to your ARTIFACT -->
-		<a href="http://thaoeder.github.io/Poem/main.html">
+		<a href="http://thaoeder.github.io/Poem/">
 
 			<div class="module">
 
