--- a/Poem/strophe_1.html
+++ b/Poem/strophe_1.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>POEM</title>
+		<title>VERSE 1</title></title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
 		
 	</head>
