--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-		<title>BLUB</title>
+		<title>001</title>
 		<link href="styles.css" rel="stylesheet">
     </head>
     
