--- a/Poem/strophe_1.html
+++ b/Poem/strophe_1.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>VERSE 1</title></title>
+		<title>CIRCLE 1 G-Translation</title></title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
-		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
@@ -11,14 +11,26 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Seven years ago, I'm seventeen<br>
-		He twenties, the youngest in the village<br>
-		Xuan Duc, Dong flanks Đoài rice<br>
-		Breakfast the next child, his meals to</div>
-		
-		<a class="left" href="strophe_1d.html">.</a>
+		<div id="container">
+	        <span id="left">
+	        	Núi Đôi<br>
+	        	Bảy năm về trước, em mười bảy<br>
+	        	Anh mới đôi mươi, trẻ nhất làng<br>
+	        	Xuân Dục, Đoài Đông hai cánh lúa<br>
+	        	Bữa thì em tới, bữa anh sang
+	        </span>
+	        <span id="right">
+	        	Two Moutain<br>
+	        	Seven years ago , I'm seventeen<br>
+	        	He twenties , the youngest in the village<br>
+	        	Xuan Duc , Dong flanks Đoài rice<br>
+	        	Breakfast the next child , his meals to
+	        </span>
+    	</div>
+    	
+    	<a class="left" href="strophe_1d.html">.</a>
 		<a class="right" href="strophe_2.html">..</a>
-		<a class="middle" href="strophe_empty.html">&#8675;</a>
-
+		
+		<p>poem by Vũ Cao &#9116; translation by Google &#9116; one-time text insert  &#9116; further circles by swap button</p>
 	</body>
 </html>
