--- a/Poem/strophe_2.html
+++ b/Poem/strophe_2.html
@@ -1,23 +1,38 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>POEM</title>
+		<title>CIRCLE 2 G-Translation</title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
-		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 	</head>
+	
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>My ways between two slopes<br>
-		Double tops up the mountain village called Double<br>
-		I was kidding him: how well that<br>
-		Husband and wife standing mountain mountain twin!</div>
+		<div id="container">
+	        <span id="left">
+	        	Two moutain<br>
+	        	Seven years ago , I'm seventeen<br>
+	        	He twenties , the youngest village<br>
+	        	Xuan Duc , Dong flanks Đoài rice<br>
+	        	Breakfast the next child , his meals to
+	        </span>
+	        	
+	        <span id="right">
+	        	hai núi<br>
+	        	Bảy năm trước , tôi mười bảy<br>
+	        	Ông tuổi đôi mươi , trẻ nhất làng<br>
+	        	Xuân Đức , Đông hai cánh lúa Đoài<br>
+	        	Ăn sáng các con tiếp theo , các bữa ăn của mình để
+	        </span>
+    	</div>
 	
 		<a class="left" href="strophe_1.html">.</a>
 		<a class="right" href="strophe_3.html">...</a>
-		<a class="middle" href="index2.html">&#8675;</a>
+		
+				<p>poem by Vũ Cao &#9116; translation by Google &#9116; one-time text insert  &#9116; further circles by swap button</p>
 	</body>
 </html>
