--- a/Poem/strophe_3.html
+++ b/Poem/strophe_3.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>POEM</title>
+		<title>CIRCLE 3 G-Translation</title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
-		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
@@ -11,14 +11,28 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Suddenly last season to contemplate enemy<br>
-		Red fire temple ignore the body cau<br>
-		New to speak alone, had a promise<br>
-		Doubt where there was never heard another word.</div>
-		
+		<div id="container">
+	        <span id="left">
+	        	hai núi<br>
+	        	Bảy năm trước , tôi mười bảy<br>
+	        	Ông tuổi đôi mươi , trẻ nhất làng<br>
+	        	Xuân Đức , Đông hai cánh lúa Đoài<br>
+	        	Ăn sáng các con tiếp theo , các bữa ăn của mình để
+	        </span>
+	        	
+	        <span id="right">
+	        	two mountain<br>
+	        	Seven years ago , I seventeen<br>
+	        	He twenties , the youngest village<br>
+	        	Spring Germany , eastern flanks Đoài rice<br>
+	        	Breakfast the next child , his meals
+	        </span>
+    	</div>
+    	
 		<a class="left" href="strophe_2">..</a>
 		<a class="right" href="strophe_4.html">....</a>
-		<a class="middle" href="index-red.html">&#8675;</a>
 		
+				<p>poem by Vũ Cao &#9116; translation by Google &#9116; one-time text insert  &#9116; further circles by swap button</p>
+
 	</body>
 </html>
