--- a/Poem/strophe_4.html
+++ b/Poem/strophe_4.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>POEM</title>
+		<title>CIRCLE 4 G-Translation</title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
-		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
@@ -11,14 +11,28 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Britain in the team , to the Northeast<br>
-		Fought selflessly in the year<br>
-		Several semiconductor companies to ask<br>
-		Who people Xuan Duc , Double Mountain reasonable?</div>
+		<div id="container">
+	        <span id="left">
+	        	two mountain<br>
+	        	Seven years ago , I seventeen<br>
+	        	He twenties , the youngest village<br>
+	        	Spring Germany , eastern flanks Đoài rice<br>
+	        	Breakfast the next child , his meals
+	        </span>
+	        	
+	        <span id="right">
+	        	hai núi<br>
+	        	Bảy năm trước, tôi mười bảy<br>
+	        	Ông tuổi đôi mươi , trẻ nhất làng<br>
+	        	Xuân Đức , sườn phía đông Đoài gạo<br>
+	        	Ăn sáng các con tiếp theo , các bữa ăn của mình
+	        </span>
+    	</div>
 		
-		<a class="left" href="strophe_3.html">.</a>
-		<a class="right" href="strophe_1.html">...</a>
-		<a class="middle" href="index2.html">&#8675;</a>
+		<a class="left" href="strophe_3.html">...</a>
+		<a class="right" href="strophe_1.html">.</a>
 		
+				<p>poem by Vũ Cao &#9116; translation by Google &#9116; one-time text insert  &#9116; further circles by swap button</p>
+
 	</body>
 </html>
