--- a/Poem/strophe_1d.html
+++ b/Poem/strophe_1d.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>POEM</title>
+		<title>1st circle 1 B-Translation</title>
 		<link href="poem.css" rel="stylesheet" type="text/css">
-		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 		<script language="javascript" type="text/javascript" src="lib/p5.js"></script>
@@ -11,13 +12,27 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 		
-		<div>Vor sieben Jahren, ich bin siebzehn<br>
-		Er zwanziger Jahre, das jüngste Dorf<br>
-		Xuan Duc, flankiert Dong Đoài Reis<br>
-		Das Frühstück am nächsten Kind, seine Mahlzeiten</div>
-		
+		<div id="container">
+	        <span id="left">
+	        	Núi Đôi<br>
+	        	Bảy năm về trước, em mười bảy<br>
+	        	Anh mới đôi mươi, trẻ nhất làng<br>
+	        	Xuân Dục, Đoài Đông hai cánh lúa<br>
+	        	Bữa thì em tới, bữa anh sang
+	        </span>
+	        <span id="right">
+	        	Double Mountain<br>
+	        	Seven years ago, I'm seventeen<br>
+	        	He was the youngest, twin villages<br>
+	        	Spring, Winter wheat wings Đoài<br>
+	        	Next, I packed breakfast to
+	        </span>
+    	</div>
+    	
 		<a class="left" href="strophe_2d.html">..</a>
 		<a class="right" href="strophe_1.html">.</a>
-		<a class="middle" href="strophe_empty.html">&#8675;</a>
+		
+		<p>poem by Vũ Cao &#9116; translation by Bing &#9116; one-time text insert  &#9116; further circles by swap button</p>
+
 	</body>
 </html>
