--- a/Uebersetzung/bt.html
+++ b/Uebersetzung/bt.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>CIRCLE 1 G-Translation</title></title>
-		<link href="poem.css" rel="stylesheet" type="text/css">
+		<link href="bt.css" rel="stylesheet" type="text/css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto:700&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
@@ -10,8 +10,11 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
+		</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-
+		<div id="google_translate_element"></div>
+		<script type="text/javascript"></script>
+		
 		<div id="container">
 	        <span id="left">
 	        	Núi Đôi<br>
@@ -29,9 +32,6 @@
 	        </span>
     	</div>
     	
-    	<a class="left" href="strophe_1d.html">.</a>
-		<a class="right" href="strophe_2.html">..</a>
-		
-		<p>poem by Vũ Cao &#9116; translation by Google &#9116; one-time text insert  &#9116; further circles by swap button</p>
+		<p>poem by Vũ Cao &#9116;</p>
 	</body>
 </html>
