--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 
 		<!-- This anchor should link to your ARTIFACT -->
-		<a href="Uebersetzung/bt.html">
+		<a href="Poem/strophe_1.html">
 
 			<div class="module">
 
