--- a/Poem/strophe_1.html
+++ b/Poem/strophe_1.html
@@ -10,6 +10,10 @@
 		<script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
 		<script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
+		</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+		
+		<div id="google_translate_element"></div>
+		<script type="text/javascript"></script>
 
 
 		<div id="container">
